add all user api endpoints, finish sessions
